--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "name": "Jon Schlinkert",
     "url": "https://github.com/jonschlinkert"
   },
+  "contributors": [
+    "Anders D. Johnson (https://github.com/adjohnson916)"
+  ],
   "repository": "jonschlinkert/bullets",
   "bugs": {
     "url": "https://github.com/jonschlinkert/bullets/issues"
